--- a/lab1/public/index.html
+++ b/lab1/public/index.html
@@ -39,7 +39,7 @@
   <h4>Спеціальність: Інженерія програмного забезпечення</h4>
   <h4>Курс: 3</h4>
   <h4>Номер групи: 6.1210-2пі</h4>
-  <h4>Номер у журналі академічної групи: ..</h4>
+  <h4>Номер у журналі академічної групи: 37</h4>
 </div>
 
 <div class="container-fluid bg-3 text-center">
