--- a/lab3/webpack-project/src/pages/index.html
+++ b/lab3/webpack-project/src/pages/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>Особиста сторінка (блог) Храпка Валерія</h1>
+		<h1>Особиста сторінка (блог) Храпка Валерія Віталійовича</h1>
 		<nav>
 			<ul>
 				<li><a href="index.html">Моя біографія</a></li>
@@ -22,19 +22,7 @@
 			<img src="../assets/images/my_photo.jpg" alt="Student's photo" width="300" height="350">
 			<p>Фото</p>
 			<p>
-				&emsp;Томас народився і виріс у середньому місті в США. Його батьки були працівниками середнього класу, 
-				які намагалися дати йому кращу освіту та можливості у житті. Майкл був одним із найкращих учнів у школі 
-				та планував продовжити свою освіту в університеті.<br>
-				&emsp;Після закінчення школи Майкл вступив до коледжу, щоб здобути ступінь у галузі бізнесу. Під час 
-				навчання він також працював на неповний робочий день у місцевому кафе, щоб сплачувати свої витрати. 
-				Він був відповідальним та дисциплінованим студентом, який прагнув успіху у навчанні та кар'єрі.<br>
-				&emsp;У вільний час Майкл займався спортом та фітнесом, що допомагало йому зберігати фізичну форму та 
-				покращувати здоров'я. Він також любив подорожувати та відкривати нові місця, тому під час канікул та 
-				вихідних він часто їздив до інших міст чи країн, щоб побачити нові культури та познайомитися з цікавими 
-				людьми. Майкл був активним учасником студентського життя. Він брав участь у різних студентських організаціях, 
-				включаючи спортивні клуби та громадські групи, де допомагав організовувати заходи та волонтерити.<br>
-				&emsp;Загалом, Майкл був розумним, працьовитим та енергійним хлопцем, який прагнув успіху в навчанні, 
-				кар'єрі та особистому житті. Він мав багато друзів і був коханою людиною у своїй сім'ї та суспільстві.
+		
 			</p>
 		</div>
 		<div>
