--- a/lab3/webpack-project/src/pages/rozklad.html
+++ b/lab3/webpack-project/src/pages/rozklad.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-	<h1>Особиста сторінка (блог) Кузьмінова Владислава Олександровича</h1>	
+		<h1>Особиста сторінка (блог) Храпка Валерія Віталійовича</h1>	
 		<nav>
 			<ul>
 				<li><a href="index.html">Моя біографія</a></li>
